[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Player" type="Sprite"]
modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Power_up_cool_down" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4.58211e-06, -1.78814e-06 )
shape = SubResource( 1 )

[connection signal="timeout" from="Reload_speed" to="." method="_on_Reload_speed_timeout"]
[connection signal="timeout" from="Power_up_cool_down" to="." method="_on_Power_up_cool_down_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
